--- a/templates/index.html
+++ b/templates/index.html
@@ -77,8 +77,9 @@
           <div class="modal-body">
             <div class="row g-4">
               <div class="col-12 col-lg-7">
-                <div class="ratio ratio-16x9 rounded-3 overflow-hidden border">
+                <div class="ratio ratio-16x9 rounded-3 overflow-hidden border position-relative">
                   <video id="editorVideo" controls></video>
+                  <div id="cropOverlay"></div>
                 </div>
                 <div class="mt-3">
                   <label class="form-label small d-none">Linha do tempo</label>
